# arduino-aux-heater

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  platformio.ini
ArduinoMock/: Arduino.cpp  Arduino.h  Stream.cpp  Stream.h
AudiControl/: AudiControl.ino  AudiControl.sln  AudiControl.vcxproj  AudiControl.vcxproj.filters  AuxHeaterSerial.cpp  AuxHeaterSerial.h  BaseSerialHandler.cpp  BaseSerialHandler.h  BatteryMonitor.cpp  Bmp280Handler.cpp  Bmp280Handler.h  CMDSerialHandler.cpp  CMDSerialHandler.h  DigitalOscilloscope.cpp  DigitalOscilloscope.h  GSMSerialHandler.cpp  GSMSerialHandler.h  RemoteDigitalSerialHandler.cpp  RemoteDigitalSerialHandler.h  SerialTimerResponseHandler.cpp  SerialTimerResponseHandler.h  SoftwareSerialHandler.cpp  SoftwareSerialHandler.h  Timer.cpp  Timer.h  VoltMeter.cpp  VoltMeter.h
AudiControlUnitTest/: AudiControlUnitTest.vcxproj  AudiControlUnitTest.vcxproj.filters  BaseSerialHandlerMock.cpp  BaseSerialHandlerMock.h  BaseSerialHandlerTest.cpp  BaseSerialHandlerTestMock.cpp  BaseSerialHandlerTestMock.h  GsmSerialHandlerTest.cpp  SerialCharResponseHandlerMock.cpp  SerialCharResponseHandlerMock.h  SerialCharResponseHandlerTest.cpp  SerialTimeResponseHandlerTest.cpp  SerialTimerResponseHandlerMock.cpp  SerialTimerResponseHandlerMock.h  TimerTest.cpp  UtilTest.cpp  VoltMeterTest.cpp  stdafx.cpp
arduino-stub/: Arduino.cpp  Arduino.h  EEprom.h  Print.h  Stream.h
aux-heater/: .gitignore  AuxHeaterSerial.cpp  BaseSerialHandler.h  BitDataManager.cpp  BitDataManager.h  GSMSerialHandler.h  SerialCharResponseHandler.cpp  SerialTimerResponseHandler.cpp  SerialTimerResponseHandler.h  Timer.cpp  Util.cpp  VoltMeter.cpp  aux-heater.ino  platformio.ini
aux-heater-test/: BaseSerialHandlerMock.cpp  BaseSerialHandlerMock.h  BaseSerialHandlerTest.cpp  BaseSerialHandlerTestMock.cpp  BaseSerialHandlerTestMock.h  GsmSerialHandlerTest.cpp  SerialCharResponseHandlerMock.h  SerialCharResponseHandlerTest.cpp  SerialStream.cpp  SerialTimeResponseHandlerTest.cpp  SerialTimerResponseHandlerMock.cpp  SerialTimerResponseHandlerMock.h  TimerMock.cpp  TimerMock.h  TimerTest.cpp  UtilTest.cpp  VoltMeterTest.cpp  aux-heater-test-google.sln  aux-heater-test-google.vcxproj  aux-heater-test-google.vcxproj.filters  aux-heater-test.sln  aux-heater-test.vcxproj  aux-heater-test.vcxproj.filters
aux-heater-test/src/: AuxHeaterSerialTest.cpp  BaseSerialHandlerMock.cpp  BaseSerialHandlerTest.cpp  BaseSerialHandlerTestMock.h  ByteArrayStreamTest.cpp  GsmSerialHandlerTest.cpp  LedControllerTest.cpp  PhonebookReaderTest.cpp  SerialCharResponseHandlerMock.cpp  SerialCharResponseHandlerTest.cpp  SerialTimeResponseHandlerTest.cpp  SerialTimerResponseHandlerMock.h  SocketMessageBufferTest.cpp  StackArrayTest.cpp  TimerMock.cpp  TimerMock.h  TimerTest.cpp  UtilTest.cpp  VoltMeterTest.cpp
aux-heater-test/src/array/: BinaryMessageArrayTest.cpp  ByteStackArrayTest.cpp
aux-heater-test/src/mock/: BaseSerialHandlerMock.h  BaseSerialHandlerTestMock.cpp  BaseSerialMock.h  GSMSerialHandlerTestMock.cpp  GSMSerialHandlerTestMock.h  SerialCharResponseHandlerMock.cpp  SerialCharResponseHandlerMock.h  SerialTimerResponseHandlerMock.h  SimcomGSMTestMock.cpp  SimcomGSMTestMock.h  TimerMock.cpp  TimerMock.h
aux-heater/src/: AudiControls.cpp  AuxHeaterSerial.cpp  AuxHeaterSerial.h  BaseSerialHandler.cpp  BatteryMonitor.cpp  BatteryMonitor.h  BluetoothSerialHandler.cpp  BluetoothSerialHandler.h  CMDSerialHandler.h  DigitalOscilloscope.h  GSMSerialHandler.cpp  GSMSerialHandler.h  LedController.cpp  LedController.h  SerialCharResponseHandler.cpp  SerialCharResponseHandler.h  TemperatureHandler.cpp  VoltMeter.h  aux-heater.ino
aux-heater/src/bluetooth/: BLEHandler.h
aux-heater/src/common/: StringStackArray.h  TimeUtil.cpp  TimeUtil.h  Timer.cpp  Timer.h  Util.cpp  Util.h  VoltMeter.cpp  VoltMeter.h
aux-heater/src/gsm/: GSMSerialHandler.cpp  PhoneEntryArray.h  PhonebookReader.h  UbloxGSMHandler.cpp  UbloxGSMHandler.h
aux-heater/src/libs/: ELECHOUSE_CC1101.cpp  ELECHOUSE_CC1101.h
aux-heater/src/oscilloscope/: DigitalOscilloscope.cpp  DigitalOscilloscope.h
aux-heater/src/serial/: BaseSerialHandler.cpp  DebugSerialHandler.cpp  DebugSerialHandler.h  SerialCharResponseHandler.cpp  SerialCharResponseHandler.h  SerialTimerResponseHandler.cpp  SerialTimerResponseHandler.h
aux-heater/src/src/: AudiControls.cpp  AudiControls.h  AuxHeaterSerial.cpp  AuxHeaterSerial.h  BatteryMonitor.cpp  BatteryMonitor.h  DebugHandler.h  Definitions.h  GSMSerialHandler.cpp  GSMSerialHandler.h  TemperatureHandler.cpp  TemperatureHandler.h  main.cpp
aux-heater/src/src/bluetooth/: BLEHandler.cpp  BLEHandler.h  BLESerialHandler.cpp  BLESerialHandler.h  BLEServerHandler.cpp  BLEServerHandler.h  BluetoothSerialHandler.cpp  BluetoothSerialHandler.h
aux-heater/src/src/common/: BinaryMessageStack.h  Button.h  ByteStackArray.h  DebugHandler.cpp  DebugHandler.h  StackArray.h  StringStackArray.h  TimeManager.cpp  TimeUtil.cpp  TimeUtil.h  Timer.cpp  Timer.h  Util.cpp  Util.h  VoltMeter.cpp  VoltMeter.h
aux-heater/src/src/gsm/: GSMSerialHandler.cpp  GSMSerialHandler.h  PhoneEntryArray.h  PhonebookReader.cpp  PhonebookReader.h  SimcomGSMHandler.cpp  SimcomGSMHandler.h  UbloxGSMHandler.cpp  UbloxGSMHandler.h
aux-heater/src/src/measurements/: VoltMeter.cpp  VoltMeter.h
aux-heater/src/src/serial/: BaseSerialHandler.cpp  BaseSerialHandler.h  DebugHandler.h  SerialCharResponseHandler.cpp  SerialCharResponseHandler.h  SerialTimerResponseHandler.cpp
gtest/: AuxHeaterSerialTest.cpp  SimcomGsmTest.cpp
mvsc-gtest/: mvsc-gtest.sln  mvsc-gtest.vcxproj  mvsc-gtest.vcxproj.filters
src/: AuxHeaterSerial.cpp  AuxHeaterSerial.h  BatteryMonitor.cpp  BatteryMonitor.h  Definitions.h  main.cpp
src/bluetooth/: BLEHandler.cpp  BLEServerHandler.cpp
src/gsm/: PhonebookReader.cpp
